WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
25390
With 3d rendering, point mapping with perspective is broken sometimes
https://bugs.webkit.org/show_bug.cgi?id=25390
Summary
With 3d rendering, point mapping with perspective is broken sometimes
Simon Fraser (smfr)
Reported
2009-04-24 23:04:20 PDT
Point mapping through 3d transforms is broken, when 3d-rendering is enabled, when the child element of the element with -webkit-perspective does not itself have a transform.
Attachments
Patch, testcase, changelog
(10.18 KB, patch)
2009-04-24 23:25 PDT
,
Simon Fraser (smfr)
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2009-04-24 23:25:00 PDT
Created
attachment 29781
[details]
Patch, testcase, changelog
Simon Fraser (smfr)
Comment 2
2009-04-25 21:12:10 PDT
http://trac.webkit.org/changeset/42872
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug